// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hosts actions creates HOST_POWER_STATUS_REQUEST and fails when host not found 1`] = `
Array [
  Object {
    "key": "HOST_POWER_STATUS",
    "payload": Object {
      "id": 0,
      "url": "/hosts/0/power",
    },
    "type": "HOST_POWER_STATUS_REQUEST",
  },
  Object {
    "payload": Object {
      "key": "HOST_POWER_STATUS",
      "payload": Object {
        "id": 0,
      },
      "url": "/hosts/0/power",
    },
    "type": "API_GET",
  },
  Object {
    "key": "HOST_POWER_STATUS",
    "payload": Object {
      "id": 0,
      "url": "/hosts/0/power",
    },
    "response": [Error: Request failed with status code 500],
    "type": "HOST_POWER_STATUS_FAILURE",
  },
]
`;

exports[`hosts actions creates HOST_POWER_STATUS_REQUEST and responds with success 1`] = `
Array [
  Object {
    "key": "HOST_POWER_STATUS",
    "payload": Object {
      "id": 1,
      "url": "/hosts/1/power",
    },
    "type": "HOST_POWER_STATUS_REQUEST",
  },
  Object {
    "payload": Object {
      "key": "HOST_POWER_STATUS",
      "payload": Object {
        "id": 1,
      },
      "url": "/hosts/1/power",
    },
    "type": "API_GET",
  },
  Object {
    "key": "HOST_POWER_STATUS",
    "payload": Object {
      "id": 1,
      "url": "/hosts/1/power",
    },
    "response": Object {
      "id": 1,
      "state": "na",
      "title": "N/A",
    },
    "type": "HOST_POWER_STATUS_SUCCESS",
  },
]
`;
